applications/openeuler-website-ru/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: website-ru
  name: website-ru
