applications/openeuler-website-ru/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openeuler-website-v2-frontend
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      component: website-frontend
  template:
    metadata:
      labels:
        component: website-frontend
    spec:
      containers:
      - name: vuepress
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-website-frontend:7c257239f962b123991b1623330401
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openeuler-website-v2-backend
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      component: website-backend
  template:
    metadata:
      labels:
        component: website-backend
    spec:
      containers:
        - name: nodejs
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-website-backend:7c257239f962b123991b1623330401
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
              name: http
              protocol: TCP
