applications/openeuler-website-ru/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/custom-http-errors: "400,500,404"
  name: website-ru-ingress-backend
spec:
  tls:
    - hosts:
        - ru.openeuler.org
      secretName: website-ru-tls-main-secret
  rules:
    - host: ru.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-backend-service
              servicePort: 80
            path: /api(/|$)(.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-connections: "2000"
    nginx.ingress.kubernetes.io/limit-rps: "2000"
    nginx.ingress.kubernetes.io/custom-http-errors: 400,500,404
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header X-Frame-Options "ALLOW-FROM https://vhall.huawei.com";
      add_header X-Cache-Status $upstream_cache_status;
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com www.google-analytics.com www.googletagmanager.com 'unsafe-eval' 'unsafe-inline';object-src 'none';frame-ancestors https://vhall.huawei.com";
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/ru/other/cla https://clasign.osinfra.cn/sign/Z2l0ZWUlMkZvcGVuZXVsZXI= redirect;
      rewrite ^/ru/docs(/|$)(.*) https://docs.ru.openeuler.org/ru/docs/$2 redirect;
      rewrite ^/zh(/|$)(.*) https://openeuler.org/zh/$2 redirect;
      rewrite ^/en(/|$)(.*) https://openeuler.org/en/$2 redirect;
      proxy_cache statics_cache;
      proxy_cache_lock on;
      proxy_cache_key $server_name$uri$is_args$args;
      proxy_ignore_headers Cache-Control;
      proxy_ignore_headers Set-Cookie;
      proxy_cache_valid 60m;
      location ~ /purge(/.*) {
          proxy_cache_purge  statics_cache $server_name$1$is_args$args;
      }
      proxy_cache_bypass $nocache;
      proxy_no_cache $nocache;
  name: website-ru-ingress-main
spec:
  tls:
    - hosts:
        - ru.openeuler.org
      secretName: website-ru-tls-main-secret
  rules:
    - host: ru.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-frontend-service
              servicePort: 80
            path: /
